--- a/font-end/public/index.html
+++ b/font-end/public/index.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     
-    <title>Web Bán Sách</title>
+    <title>Book Store - Nhà sách trực tuyến dành cho bạn</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
